--- a/.env.development
+++ b/.env.development
@@ -4,10 +4,10 @@
 VITE_API_PREFIX = '/api'
 
 # 接口地址
-VITE_API_BASE_URL = 'http://localhost:8000'
+VITE_API_BASE_URL = 'http://localhost:8000/api'
 
 # 地址前缀
 VITE_BASE = '/'
 
 # 是否开启开发者工具
-VITE_OPEN_DEVTOOLS = true
+VITE_OPEN_DEVTOOLS = false
