--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@
 VITE_BUILD_MOCK = false
 
 # 接口地址
-VITE_API_BASE_URL = 'https://api.continew.top'
+VITE_API_BASE_URL = 'https://aizsj.com/api'
 
 # 地址前缀
 VITE_BASE = '/'
