--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,11 @@
 # 环境变量 (命名必须以 VITE_ 开头)
 
 # 接口前缀
-VITE_API_PREFIX = '/api'
+#VITE_API_PREFIX = '/api'
 
 # 接口地址
-VITE_API_BASE_URL = 'http://localhost:8000'
-VITE_API_WS_URL = 'ws://localhost:8000'
+VITE_API_BASE_URL = 'http://192.168.31.50:8000/api'
+VITE_API_WS_URL = 'ws://192.168.31.50:8000/api'
 
 # 地址前缀
 VITE_BASE = '/'
